# call_me_maybe

./: Makefile  README.md  context.md  pyproject.toml  requirements.txt
data/: context.md
data/output/: function_calling_results.json  output.json
llm_sdk/: pyproject.toml
llm_sdk/llm_sdk/: __init__.py
src/: __init__.py  __main__.py  main.py  models.py  schema.py  translator.py  translator.py.bak
