[project]
name = "call_me_maybe"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "transformers",
    "torch",
    "huggingface-hub",
    "llm_sdk",
    "flake8",
    "pudb",
    "mypy",
    "pydantic"
]

[tool.uv.sources]
llm_sdk = { path = "llm_sdk" }

[project.scripts]
run = "src.__main__:main"

[tool.mypy]
mypy_path = "llm_sdk"
