[project]
name = "call_me_maybe"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "llm_sdk",
    "flake8",
    "pudb",
    "mypy",
    "pydantic",
    "accelerate"
]

[tool.uv.sources]
llm_sdk = { path = "llm_sdk" }
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[project.scripts]
run = "src.__main__:main"

[tool.mypy]
mypy_path = "llm_sdk"
